update assets and fonts

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <nav class="navbar-brand" href="#">
-                    <a href="#"><img src="Image/aventus.png" class="img-fluid" style="width: 155px;"></a>
+                    <a href="#"><img src="Image/logotrans.png" class="img-fluid" style="width: 190px;"></a>
                 </nav>
                 <div class="collapse navbar-collapse" id="collapse">
                     <div class="col2 ml-auto">
@@ -97,10 +97,11 @@
             <div class="row" style="margin-top: 50px;">
                 <div class="card-deck">
                     <div class="card surehealthcard">
-                        <img class="card-img-top img-fluid mx-auto" src="Image/classic.png" alt="Card image cap"
+                        <img class="card-img-top img-fluid mx-auto" src="Image/classictrans.png" alt="Card image cap"
                             style="width:55px;">
                         <div class="card-body">
-                            <h5 class="card-title text-center" style="font-family: Muli;font-weight: bold;">Classic</h5>
+                            <h5 class="card-title text-center" style="font-family: Muli;font-weight: bold;color: #424242">Classic</h5>
+                            <p class = "text-center pprice">&#8369;600</p>
                             <ul>
                                 <li class="a">Unlimited consultations with our medical consultants</li>
                                 <li class="a">Fixed fee of PHP 400 for specialists</li>
@@ -113,10 +114,11 @@
                         </div>
                     </div>
                     <div class="card surehealthcard">
-                        <img class="card-img-top img-fluid mx-auto" src="Image/classic.png" alt="Card image cap"
+                        <img class="card-img-top img-fluid mx-auto" src="Image/elitetrans.png" alt="Card image cap"
                             style="width:55px;">
                         <div class="card-body">
-                            <h5 class="card-title text-center" style="font-family: Muli;font-weight: bold;">Elite</h5>
+                            <h5 class="card-title text-center" style="font-family: Muli;font-weight: bold;color: #424242">Elite</h5>
+                            <p class = "text-center pprice">&#8369;999</p>
                             <ul>
                                 <li class="a">Unlimited consultations with our medical consultants</li>
                                 <li class="a">Fixed fee of PHP 400 for specialists</li>
@@ -133,10 +135,11 @@
                         </div>
                     </div>
                     <div class="card surehealthcard">
-                        <img class="card-img-top img-fluid mx-auto" src="Image/elite.png" alt="Card image cap"
+                        <img class="card-img-top img-fluid mx-auto" src="Image/primetrans.png" alt="Card image cap"
                             style="width:55px;">
                         <div class="card-body">
-                            <h5 class="card-title text-center" style="font-family: Muli;font-weight: bold;">Prime</h5>
+                            <h5 class="card-title text-center" style="font-family: Muli;font-weight: bold;color: #424242">Prime</h5>
+                            <p class = "text-center pprice">&#8369;2999</p>
                             <ul>
                                 <li class="a">Unlimited consultations with our medical consultants</li>
                                 <li class="a">Fixed fee of PHP 400 for specialists</li>
@@ -164,10 +167,11 @@
             <div class="row" style="margin-top: 50px;">
                 <div class="card-deck">
                     <div class="card surehealthcard">
-                        <img class="card-img-top img-fluid mx-auto" src="Image/prime.png" alt="Card image cap"
+                        <img class="card-img-top img-fluid mx-auto" src="Image/veterantrans.png" alt="Card image cap"
                             style="width:55px;">
                         <div class="card-body">
-                            <h5 class="card-title text-center" style="font-family: Muli;font-weight: bold;">Elite</h5>
+                            <h5 class="card-title text-center" style="font-family: Muli;font-weight: bold;color: #424242">Veteran</h5>
+                            <p class = "text-center pprice">&#8369;1499</p>
                             <ul>
                                 <li class="a">Unlimited consultations with our medical consultants</li>
                                 <li class="a">Fixed fee of PHP 400 for specialists</li>
@@ -187,11 +191,12 @@
                         </div>
                     </div>
                     <div class="card surehealthcard">
-                        <img class="card-img-top img-fluid mx-auto" src="Image/prestige.png" alt="Card image cap"
+                        <img class="card-img-top img-fluid mx-auto" src="Image/prestigetrans.png" alt="Card image cap"
                             style="width:55px;">
                         <div class="card-body">
-                            <h5 class="card-title text-center" style="font-family: Muli;font-weight: bold;">Prestige
+                            <h5 class="card-title text-center" style="font-family: Muli;font-weight: bold;color:#424242">Prestige
                             </h5>
+                            <p class = "text-center pprice">&#8369;9999</p>
                             <ul>
                                 <li class="a">Unlimited consultations with our medical consultants</li>
                                 <li class="a">Fixed fee of PHP 400 for specialists</li>
