--- a/faq.html
+++ b/faq.html
@@ -47,7 +47,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <nav class="navbar-brand" href="#">
-                    <a href="#"><img src="Image/aventus.png" class="img-fluid" style="width: 155px;"></a>
+                    <a href="#"><img src="Image/logotrans.png" class="img-fluid" style="width: 190px;"></a>
                 </nav>
                 <div class="collapse navbar-collapse" id="collapse">
                     <div class="col2 ml-auto">
@@ -169,7 +169,7 @@
         <div class="row" style="margin-top:80px;">
             <div class="col-lg-12 text-center">
                 <div class="form-group" style="line-height: 1;">
-                    <img src="Image/surehealth.png" class="img-fluid" style="width: 100px;">
+                    <img src="Image/surehealthtrans.png" class="img-fluid" style="width: 100px;">
                     <p class="pready">Ready to buy SureHealth?</p>
                     <p class="pready1">Click the button below. Buy now!</p>
                     <input type="submit" value="Buy now" class="btnbuynow">
