--- a/backup1.html
+++ b/backup1.html
@@ -21,29 +21,33 @@
 </head>
 
 <body>
-    <div class="container con conheader">
-        <div class="row" style="margin-top:10px;">
-            <div class="col-lg-6">
-                <div class="form-inline d-flex">
-                    <img src="Image/maps.png" class="img-fluid"
-                        style="width:25px;margin-left: 20px;margin-right:5px;" />
-                    <p class="padd">6F Filomena Building, #104 Amorsolo St., Legaspi Village, Makati, Metro Manila 1229
-                    </p>
+    <div class="container-fluid">
+        <div class="container con">
+            <div class="row" style="margin-top:10px;">
+                <div class="col-lg-6">
+                    <div class="form-inline d-flex">
+                        <img src="Image/maps.png" class="img-fluid"
+                            style="width:25px;margin-left: 20px;margin-right:5px;" />
+                        <p class="padd">6F Filomena Building, #104 Amorsolo St., Legaspi Village, Makati, Metro Manila
+                            1229
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="form-inline" style="margin-right: 25px;">
+                        <img src="Image/mail.png" class="img-fluid ml-auto"
+                            style="width:20px;margin-top:-4px;margin-right:5px;" />
+                        <p class="padd" style="margin-right:10px;">aventusmedical@gmail.com</p>
+                        <img src="Image/cel.png" class="img-fluid"
+                            style="width:20px;margin-right:5px;margin-top:-4px;" />
+                        <p class="padd">63-2-840-0588</p>
+                    </div>
                 </div>
             </div>
-            <div class="col-lg-6">
-                <div class="form-inline" style="margin-right: 25px;">
-                    <img src="Image/mail.png" class="img-fluid ml-auto"
-                        style="width:20px;margin-top:-4px;margin-right:5px;" />
-                    <p class="padd" style="margin-right:10px;">aventusmedical@gmail.com</p>
-                    <img src="Image/cel.png" class="img-fluid" style="width:20px;margin-right:5px;margin-top:-4px;" />
-                    <p class="padd">63-2-840-0588</p>
+            <div class="row" style="margin-top:-10px;">
+                <div class="col-lg-12">
+                    <hr class="hrheader">
                 </div>
-            </div>
-        </div>
-        <div class="row" style="margin-top:-10px;">
-            <div class="col-lg-12">
-                <hr class="hrheader">
             </div>
         </div>
     </div>
@@ -95,7 +99,7 @@
                 <div class="col-lg-12 text-center">
                     <p style="font-family: Keep Calm;font-size: 25px;color:#1E3056">Why Choose <b
                             style="color: #00C853">Surehealth</b></p>
-                    <label class  = "lblwhychoosesub"
+                    <label
                         style="font-family: Muli semibold;font-size: 14px;color:#1E3056;width:50%;line-height: 1.67;margin-top:-10px;">Lorem
                         ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                         dolore magna aliqua. Ut enim ad minim veniam.</label>
@@ -108,13 +112,12 @@
             <div class="row" style="margin-top: 50px;">
                 <div class="card-deck">
                     <div class="card surehealthcard">
-                        <img class="card-img-top img-fluid mx-auto" src="Image/classic.jpg" alt="Card image cap"
+                        <img class="card-img-top img-fluid mx-auto" src="Image/classictrans.png" alt="Card image cap"
                             style="width:55px;">
                         <div class="card-body">
                             <h5 class="card-title text-center"
                                 style="font-family: Muli;font-weight: bold;color: #424242">Classic</h5>
                             <p class="text-center pprice">&#8369;600</p>
-                            <hr class = "hrfooter" style = "background-color: #E0E0E0;margin-top:10px;width:90%;margin-bottom: 20px;">
                             <ul>
                                 <li class="a pdescription">Unlimited consultations with our medical consultants</li>
                                 <li class="a pdescription">Fixed fee of PHP 400 for specialists</li>
@@ -134,7 +137,6 @@
                             <h5 class="card-title text-center"
                                 style="font-family: Muli;font-weight: bold;color: #424242">Elite</h5>
                             <p class="text-center pprice">&#8369;999</p>
-                            <hr class = "hrfooter" style = "background-color: #E0E0E0;margin-top:10px;width:90%;margin-bottom: 20px;">
                             <ul>
                                 <li class="a pdescription">Unlimited consultations with our medical consultants</li>
                                 <li class="a pdescription">Fixed fee of PHP 400 for specialists</li>
@@ -153,13 +155,12 @@
                         </div>
                     </div>
                     <div class="card surehealthcard">
-                        <img class="card-img-top img-fluid mx-auto" src="Image/prime.jpg" alt="Card image cap"
+                        <img class="card-img-top img-fluid mx-auto" src="Image/primetrans.png" alt="Card image cap"
                             style="width:55px;">
                         <div class="card-body">
                             <h5 class="card-title text-center"
                                 style="font-family: Muli;font-weight: bold;color: #424242">Prime</h5>
                             <p class="text-center pprice">&#8369;2999</p>
-                            <hr class = "hrfooter" style = "background-color: #E0E0E0;margin-top:10px;width:90%;margin-bottom: 20px;">
                             <ul>
                                 <li class="a pdescription">Unlimited consultations with our medical consultants</li>
                                 <li class="a pdescription">Fixed fee of PHP 400 for specialists</li>
@@ -197,15 +198,17 @@
                                 <h5 class="card-title text-center"
                                     style="font-family: Muli;font-weight: bold;color: #424242">Veteran</h5>
                                 <p class="text-center pprice">&#8369;1499</p>
-                                <hr class = "hrfooter" style = "background-color: #E0E0E0;margin-top:10px;width:90%;margin-bottom: 20px;">
                                 <ul>
                                     <li class="a pdescription">Unlimited consultations with our medical consultants</li>
                                     <li class="a pdescription">Fixed fee of PHP 400 for specialists</li>
                                     <li class="a pdescription">15% discount on laboratory & diagnostic services</li>
                                     <li class="a pdescription">15% discount on ultrasound services</li>
-                                    <li class="a pdescription">15% discount on physical therapy services (available only in our Makati and Calamba clinics)</li>
-                                    <li class="a pdescription">15% discount on Bio-Z (available only in our Makati and Manila clinics)</li>
-                                    <li class="a pdescription">Free dental checkup, plus a 10% discount on other dental procedures/li>
+                                    <li class="a pdescription">15% discount on physical therapy services (available only
+                                        in our Makati and Calamba clinics)</li>
+                                    <li class="a pdescription">15% discount on Bio-Z (available only in our Makati and
+                                        Manila clinics))</li>
+                                    <li class="a pdescription">Free dental checkup, plus a 10% discount on other dental
+                                        procedures/li>
                                     <li class="a pdescription">Free Basic Executive Checkup</li>
                                 </ul>
                                 <div class="text-center">
@@ -214,22 +217,24 @@
                             </div>
                         </div>
                         <div class="card surehealthcard">
-                            <img class="card-img-top img-fluid mx-auto" src="Image/prestige1.png"
+                            <img class="card-img-top img-fluid mx-auto" src="Image/prestigetrans.png"
                                 alt="Card image cap" style="width:55px;">
                             <div class="card-body">
                                 <h5 class="card-title text-center"
                                     style="font-family: Muli;font-weight: bold;color:#424242">Prestige
                                 </h5>
                                 <p class="text-center pprice">&#8369;9999</p>
-                                <hr class = "hrfooter" style = "background-color: #E0E0E0;margin-top:10px;width:90%;margin-bottom: 20px;">
                                 <ul>
                                     <li class="a pdescription">Unlimited consultations with our medical consultants</li>
                                     <li class="a pdescription">Fixed fee of PHP 300 for specialists</li>
                                     <li class="a pdescription">20% discount on laboratory & diagnostic services</li>
                                     <li class="a pdescription">15% discount on ultrasound services</li>
-                                    <li class="a pdescription">15% discount on physical therapy services (available only in our Makati and Calamba clinics)</li>
-                                    <li class="a pdescription">Free Bio-Z (available only in our Makati and Manila clinics)</li>
-                                    <li class="a pdescription">Free dental checkup, plus a 10% discount on other dental procedures</li>
+                                    <li class="a pdescription">15% discount on physical therapy services (available only
+                                        in our Makati and Calamba clinics)</li>
+                                    <li class="a pdescription">Free Bio-Z (available only in our Makati and Manila
+                                        clinics)</li>
+                                    <li class="a pdescription">Free dental checkup, plus a 10% discount on other dental
+                                        procedures</li>
                                     <li class="a pdescription">Free Comprehensive Executive Checkup</li>
                                 </ul>
                                 <div class="text-center">
