--- a/faq.html
+++ b/faq.html
@@ -47,7 +47,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <nav class="navbar-brand" href="#">
-                    <a href="#"><img src="Image/logotrans.png" class="img-fluid" style="width: 190px;"></a>
+                    <a href="#"><img src="Image/logotrans.png" class="img-fluid" style="width: 220px;"></a>
                 </nav>
                 <div class="collapse navbar-collapse" id="collapse">
                     <div class="col2 ml-auto">
@@ -177,42 +177,72 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
-        <div class="container  footer">
-            <hr style="width:500px;">
-            <div class="row" style="margin-top: 10px;">
-                <div class="col-lg-6">
-                    <div class="form-inline" style="border-right: 1px solid #dddddd">
-                        <img src="Image/cel.png" class="img-fluid ml-auto" style="width: 18px;">
-                        <p class="pcell">63-2-840-0588</p>
-                        <img src="Image/mail.png" class="img-fluid" style="width: 19px;margin-left: 3em">
-                        <p class="pemail pr-5">aventusmedical@gmail.com</p>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="form-inline ml-auto">
-                        <p class="pcell" style="margin-right:20px;">Home</p>
-                        <p class="pcell" style="margin-right:20px;">Packages</p>
-                        <p class="pcell" style="margin-right:20px;">Services</p>
-                        <p class="pcell" style="margin-right:20px;">About</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <hr>
+    <div class="container-fluid" style="background-color: #233645;margin-top:40px;">
         <div class="container">
-            <div class="row" style="margin-top:10px;">
-                <div class="col-lg-6">
-                    <p class="plastfooter">COPYRIGHT ©2019, AVENTUS</p>
+            <div class="row" style="padding-top: 70px;padding-bottom: 40px;">
+                <div class="col-lg-5">
+                    <img src="Image/logo white.png" class="img-fluid" style="width: 250px;">
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-7">
                     <div class="form-inline float-right">
-                        <img src="Image/facebookfooter.png" class="img-fluid mr-auto" style="width: 18px;margin-right: 15px !important;cursor: pointer;">
-                        <img src="Image/twitterfooter.png" class="img-fluid" style="width: 18px;cursor: pointer;">
+                        <p class="psubscribe">Subscribe to<br>Our Newsletter</p>
+                        <input type="text" class="btnsubscribe" placeholder="Your email Address....">
                     </div>
                 </div>
+                <hr class="hrfooter">
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="form-group" class="float-right">
+                        <img src="Image/call1.png" class="img-fluid" style="width: 30px;margin-top:10px;">
+                        <label class="ptime">MON TO SUN : 8:00 - 10:00</label>
+                        <label class="ptel">+632-840-0588</label>
+                    </div>
+                    <div class="form-group" class="float-right">
+                        <img src="Image/newsletter.png" class="img-fluid" style="width: 30px;margin-top:10px;">
+                        <label class="ptime">DO YOU HAVE A QUESTION?</label>
+                        <label class="ptel">aventusmedical@gmail.com</label>
+                    </div>
+                    <div class="form-group" class="float-right">
+                        <img src="Image/social.png" class="img-fluid" style="width: 30px;margin-top:10px;">
+                        <label class="ptime">SOCIAL NETWORK</label>
+                        <div class="form-inline" style="margin-left: 45px;">
+                            <img src="Image/facebookfooter.png" class="img-fluid"
+                                style="margin-right: 10px;width: 15px;cursor: pointer;">
+                            <img src="Image/twitterfooter.png" class="img-fluid"
+                                style="margin-right: 10px;width: 15px;cursor: pointer;">
+                            <img src="Image/linkedinfooter.png" class="img-fluid"
+                                style="margin-right: 10px;width: 15px;cursor: pointer;">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <p class="pmorelinks">Location</p>
+                    <p class="pfooterlinks">Alabang, Muntinlupa</p>
+                    <p class="pfooterlinks">BGC, Taguig</p>
+                    <p class="pfooterlinks">Calamba, Laguna</p>
+                    <p class="pfooterlinks">Cebu IT Park</p>
+                    <p class="pfooterlinks">Cebu Cybergate</p>
+                    <p class="pfooterlinks">Clark, Pampanga</p>
+                </div>
+                <div class="col-lg-2">
+                    <p class="pmorelinks" style="color: #233645;">Location</p>
+                    <p class="pfooterlinks">Makati</p>
+                    <p class="pfooterlinks">Manila</p>
+                    <p class="pfooterlinks">Ortigas</p>
+                    <p class="pfooterlinks">Pasay</p>
+                    <p class="pfooterlinks">Quezon</p>
+                    <p class="pfooterlinks">Sta. Rosa</p>
+                </div>
+                <div class="col-lg-4">
+                    <img src="Image/surehealthtrans.png" class="img-fluid" style="width:70px;">
+                    <p class="pfooterlinks" style="margin-top:20px;">Get the benefits you need at the price you want
+                        with our 6 SUREHEALTH card variants: Classic,
+                        Elite, Premium, Prestige, Kiddie, and Prime. Gain access to unlimited free consultations with
+                        our experts for one whole year, and enjoy generous discounts on various medical procedures.</p>
+                </div>
+                <hr class="hrfooter">
+                <p class="pcopyright">Copyright&copy;SUREHEALTH. All rights reserved</p>
             </div>
         </div>
     </div>
