--- a/faq.html
+++ b/faq.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="container con">
+    <div class="container con conheader">
         <div class="row" style="margin-top:10px;">
             <div class="col-lg-6">
                 <div class="form-inline d-flex">
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid connav">
         <div class="container con" style="margin-top:-14px;">
             <nav class="navbar navbar-expand-md">
                 <button class="navbar-toggler" data-toggle="navbar-collapse" data-target="#collapse">
@@ -180,28 +180,26 @@
     <div class="container-fluid" style="background-color: #233645;margin-top:40px;">
         <div class="container">
             <div class="row" style="padding-top: 70px;padding-bottom: 40px;">
-                <div class="col-lg-5">
+                <div class="col-lg-5 text-center">
                     <img src="Image/logo white.png" class="img-fluid" style="width: 250px;">
                 </div>
-                <div class="col-lg-7">
-                    <div class="form-inline float-right">
-                        <p class="psubscribe">Subscribe to<br>Our Newsletter</p>
-                        <input type="text" class="btnsubscribe" placeholder="Your email Address....">
-                    </div>
+                <div class="col-lg-7 consubscribe text-right">
+                    <label class="psubscribe text-left">Subscribe to<br>Our Newsletter</label>
+                    <input type="text" class="btnsubscribe" placeholder="Your email Address....">
                 </div>
                 <hr class="hrfooter">
             </div>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6 col-sm-7">
                     <div class="form-group" class="float-right">
                         <img src="Image/call1.png" class="img-fluid" style="width: 30px;margin-top:10px;">
                         <label class="ptime">MON TO SUN : 8:00 - 10:00</label>
-                        <label class="ptel">+632-840-0588</label>
+                        <p class="ptel">+632-840-0588</p>
                     </div>
                     <div class="form-group" class="float-right">
                         <img src="Image/newsletter.png" class="img-fluid" style="width: 30px;margin-top:10px;">
                         <label class="ptime">DO YOU HAVE A QUESTION?</label>
-                        <label class="ptel">aventusmedical@gmail.com</label>
+                        <p class="ptel">aventusmedical@gmail.com</p>
                     </div>
                     <div class="form-group" class="float-right">
                         <img src="Image/social.png" class="img-fluid" style="width: 30px;margin-top:10px;">
@@ -216,7 +214,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-4 col-sm-5 col-6 col-location">
                     <p class="pmorelinks">Location</p>
                     <p class="pfooterlinks">Alabang, Muntinlupa</p>
                     <p class="pfooterlinks">BGC, Taguig</p>
@@ -225,7 +223,7 @@
                     <p class="pfooterlinks">Cebu Cybergate</p>
                     <p class="pfooterlinks">Clark, Pampanga</p>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-2 col-sm-6 col-6 col-location">
                     <p class="pmorelinks" style="color: #233645;">Location</p>
                     <p class="pfooterlinks">Makati</p>
                     <p class="pfooterlinks">Manila</p>
@@ -234,7 +232,7 @@
                     <p class="pfooterlinks">Quezon</p>
                     <p class="pfooterlinks">Sta. Rosa</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-6">
                     <img src="Image/surehealthtrans.png" class="img-fluid" style="width:70px;">
                     <p class="pfooterlinks" style="margin-top:20px;">Get the benefits you need at the price you want
                         with our 6 SUREHEALTH card variants: Classic,
