--- a/index.html
+++ b/index.html
@@ -49,19 +49,16 @@
     </div>
     <div class="container-fluid">
         <div class="container con" style="margin-top:-14px;">
-            <nav class="navbar navbar-expand-md">
+            <nav class="navbar navbar-expand-md navbar-light">
                 <button class="navbar-toggler" data-toggle="navbar-collapse" data-target="#collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <nav class="navbar-brand" href="#">
-                    <a href="#"><img src="Image/logotrans.png" class="img-fluid" style="width: 220px;"></a>
+                    <a href="#"><img src="Image/logotrans.png" class="img-fluid imglogo" style="width: 220px;"></a>
                 </nav>
                 <div class="collapse navbar-collapse" id="collapse">
                     <div class="col2 ml-auto">
                         <ul class="nav navbar-nav">
-                            <li><a class="nav-link btnservices"
-                                    style="margin-right: 20px;color:#424242;font-family: Muli Semibold;font-size: 15px;"
-                                    href="404.html">Services</a></li>
                             <li><a class="nav-link btnpackages"
                                     style="margin-right: 20px;color:#424242;font-family: Muli Semibold;font-size: 15x;"
                                     href="404.html">Packages</a></li>
@@ -188,7 +185,7 @@
     <div class="container-fluid">
         <div class="container">
             <div class="row justify-content-around" style="margin-top: 50px;">
-                <div class="col-lg-10">
+                <div class="col-lg-10 col-md-12 col-sm-12 col-12">
                     <div class="card-deck">
                         <div class="card surehealthcard">
                             <img class="card-img-top img-fluid mx-auto" src="Image/veterantrans.png"
@@ -297,28 +294,26 @@
     <div class="container-fluid" style="background-color: #233645;margin-top:40px;">
         <div class="container">
             <div class="row" style="padding-top: 70px;padding-bottom: 40px;">
-                <div class="col-lg-5">
+                <div class="col-lg-5 text-center">
                     <img src="Image/logo white.png" class="img-fluid" style="width: 250px;">
                 </div>
-                <div class="col-lg-7">
-                    <div class="form-inline float-right">
-                        <p class="psubscribe">Subscribe to<br>Our Newsletter</p>
-                        <input type="text" class="btnsubscribe" placeholder="Your email Address....">
-                    </div>
+                <div class="col-lg-7 consubscribe text-right">
+                    <label class="psubscribe text-left">Subscribe to<br>Our Newsletter</label>
+                    <input type="text" class="btnsubscribe" placeholder="Your email Address....">
                 </div>
                 <hr class="hrfooter">
             </div>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6 col-sm-7">
                     <div class="form-group" class="float-right">
                         <img src="Image/call1.png" class="img-fluid" style="width: 30px;margin-top:10px;">
                         <label class="ptime">MON TO SUN : 8:00 - 10:00</label>
-                        <label class="ptel">+632-840-0588</label>
+                        <p class="ptel">+632-840-0588</p>
                     </div>
                     <div class="form-group" class="float-right">
                         <img src="Image/newsletter.png" class="img-fluid" style="width: 30px;margin-top:10px;">
                         <label class="ptime">DO YOU HAVE A QUESTION?</label>
-                        <label class="ptel">aventusmedical@gmail.com</label>
+                        <p class="ptel">aventusmedical@gmail.com</p>
                     </div>
                     <div class="form-group" class="float-right">
                         <img src="Image/social.png" class="img-fluid" style="width: 30px;margin-top:10px;">
@@ -333,7 +328,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-4 col-sm-5 col-6 col-location">
                     <p class="pmorelinks">Location</p>
                     <p class="pfooterlinks">Alabang, Muntinlupa</p>
                     <p class="pfooterlinks">BGC, Taguig</p>
@@ -342,7 +337,7 @@
                     <p class="pfooterlinks">Cebu Cybergate</p>
                     <p class="pfooterlinks">Clark, Pampanga</p>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-2 col-sm-6 col-6 col-location">
                     <p class="pmorelinks" style="color: #233645;">Location</p>
                     <p class="pfooterlinks">Makati</p>
                     <p class="pfooterlinks">Manila</p>
@@ -351,7 +346,7 @@
                     <p class="pfooterlinks">Quezon</p>
                     <p class="pfooterlinks">Sta. Rosa</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-6">
                     <img src="Image/surehealthtrans.png" class="img-fluid" style="width:70px;">
                     <p class="pfooterlinks" style="margin-top:20px;">Get the benefits you need at the price you want
                         with our 6 SUREHEALTH card variants: Classic,
