--- a/login.html
+++ b/login.html
@@ -51,15 +51,21 @@
                             <label alt='Password' placeholder='Password'></label>
                         </form>
                         <div class="div1">
-                            <label class="lblrememberme"><input type="checkbox" style="margin-top:10px;"> Remember
-                                me</label>
-                            <label class="lblforgot float-right">Forgot password?</label>
+                            <div class="row">
+                                <div class="col-lg-6 col-sm-6 col-12">
+                                    <label class="lblrememberme"><input type="checkbox" style="margin-top:10px;">
+                                        Remember
+                                        me</label>
+                                </div>
+                                <div class="col-lg-6 col-sm-6 col-12">
+                                    <label class="lblforgot float-right">Forgot password?</label>
+                                </div>
+                            </div>
                         </div>
                         <input type="button" class="btnlogin" value="Login">
                         <p class="lbldonthave">Dont have an account? <a href="signup.html"><span class="lblsign">Sign-up
                                     here</span></a></p>
                     </div>
-
                 </div>
                 <p
                     style="position: absolute;bottom:6%;font-family:hind;font-size:14px;color: #9E9E9E;margin-left: 10px;">
@@ -70,11 +76,11 @@
                         access to unlimited free consultations with our experts for one whole year, and enjoy generous
                         discounts on various medical procedures.</p><br>
                     <div class="form-inline">
-                        <hr class = "hr1"
+                        <hr class="hr1"
                             style="border:0px;background-color: white;width: 40px;height:3px;margin: 0 0 !important;text-align: left !important; margin-right: 10px !important;cursor: pointer;border-radius: 25px;">
-                        <hr class = "hr2"
+                        <hr class="hr2"
                             style="border:0px;background-color: rgba(255,255,255,0.5);width: 40px;height:3px;margin: 0 0 !important;text-align: left !important; margin-right: 10px !important;cursor: pointer;border-radius: 25px;">
-                        <hr class = "hr3"
+                        <hr class="hr3"
                             style="border:0px;background-color: rgba(255,255,255,0.5);width: 40px;height:3px;margin: 0 0 !important;text-align: left !important; margin-right: 10px !important;cursor: pointer;border-radius: 25px;">
                     </div>
                     <div class="form-inline" style="margin-top: 50px;">
@@ -99,9 +105,9 @@
         $(".phealth1").fadeOut(300, function () {
             $(this).html("Start insuring your family's health. Insuring life insuring healthcare.Gain access to unlimited free consultations with our experts for one whole year, and enjoy generous discounts on various medical procedures.").fadeIn(300);
         });
-            $(this).css("background-color","white");
-            $('.hr2').css("background-color","rgba(255,255,255,0.5)");
-            $('.hr3').css("background-color","rgba(255,255,255,0.5)");
+        $(this).css("background-color", "white");
+        $('.hr2').css("background-color", "rgba(255,255,255,0.5)");
+        $('.hr3').css("background-color", "rgba(255,255,255,0.5)");
     });
 
     $('.hr2').click(function (e) {
@@ -111,9 +117,9 @@
         $(".phealth1").fadeOut(300, function () {
             $(this).html("Get the benefits you need at the price you want with our 6 SUREHEALTH card variants: Classic, Elite, Premium, Prestige, Kiddie, and Prime.").fadeIn(300);
         });
-            $(this).css("background-color","white");
-            $('.hr1').css("background-color","rgba(255,255,255,0.5)");
-            $('.hr3').css("background-color","rgba(255,255,255,0.5)");
+        $(this).css("background-color", "white");
+        $('.hr1').css("background-color", "rgba(255,255,255,0.5)");
+        $('.hr3').css("background-color", "rgba(255,255,255,0.5)");
     });
 
     $('.hr3').click(function (e) {
@@ -123,9 +129,9 @@
         $(".phealth1").fadeOut(300, function () {
             $(this).html("We at Aventus Medical Care, Inc. are devoted to providing high-quality, effective, and efficient clinic services intended to improve the health and well-being of the communities we serve.").fadeIn(300);
         });
-            $(this).css("background-color","white");
-            $('.hr1').css("background-color","rgba(255,255,255,0.5)");
-            $('.hr2').css("background-color","rgba(255,255,255,0.5)");
+        $(this).css("background-color", "white");
+        $('.hr1').css("background-color", "rgba(255,255,255,0.5)");
+        $('.hr2').css("background-color", "rgba(255,255,255,0.5)");
     });
 </script>
 
