--- a/signup.html
+++ b/signup.html
@@ -73,7 +73,7 @@
                 <p
                     style="position: absolute;bottom:6%;font-family:hind;font-size:14px;color: #9E9E9E;margin-left: 10px;">
                     2019 All rights Reserved Surehealth by Aventus Privacy and Terms.</p>
-                <div class="col-lg-5">
+                <div class="col-lg-5 colright">
                     <label class="phealth">Surehealth</label><br>
                     <p class="phealth1">Start insuring your family's health. Insuring life insuring healthcare.Gain
                         access to unlimited free consultations with our experts for one whole year, and enjoy generous
