--- a/card.html
+++ b/card.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="container-fluid maincontainer flex-fil">
+    <div class="container-fluid maincontainer">
         <nav class="navbar navbar-expand-md nav-dark sticky-top">
             <button class="navbar-toggler" data-toggle="navbar-collapse" data-target="#collapse">
                 <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
         </nav>
         <div class="container h-100">
             <div class="row h-100 align-items-center" style="position: relative;">
-                <div class="col-lg-7 col-sm-12 col-md-12" style="margin-top:-100px;">
+                <div class="col-lg-7 col-sm-12 col-md-12 col-12" style="margin-top:-100px;">
                     <div class="form-group">
                         <div class="form-group">
                             <p class="psignin">Payment Information</p>
@@ -50,11 +50,11 @@
                             <input required='' type='text' class="txtcardnumber" name="number">
                             <label alt='Cardholder Number' placeholder='Cardholder Number'></label>
                             <div class="row">
-                                <div class="col-sm-3">
+                                <div class="col-sm-4">
                                     <input required='' type='text' class="txtfirstname" name="first-name">
                                     <label alt='First Name' placeholder='First Name'></label>
                                 </div>
-                                <div class="col-sm-6" style="padding-left:40px;">
+                                <div class="col-sm-3" style="padding-left:40px;">
                                     <input required='' type='text' class="txtlastname" name="last-name">
                                     <label alt='Last Name' placeholder='Last Name'></label>
                                 </div>
@@ -74,7 +74,7 @@
                 <p
                     style="position: absolute;bottom:6%;font-family:hind;font-size:14px;color: #9E9E9E;margin-left: 10px;">
                     2019 All rights Reserved Surehealth by Aventus Privacy and Terms.</p>
-                <div class="col-lg-5 colright">
+                <div class="col-lg-5 col-sm-12 col-md-12 col-12 colright">
                     <label class="phealth">Surehealth</label><br>
                     <p class="phealth1">Start insuring your family's health. Insuring life insuring healthcare.Gain
                         access to unlimited free consultations with our experts for one whole year, and enjoy generous
