--- a/try.html
+++ b/try.html
@@ -47,7 +47,7 @@
     <div class="container-fluid" style="padding:0px;background-color: white; border-bottom: 1px solid lightgray;">
         <div class="container con">
             <nav class="navbar navbar-expand-sm navbar-light">
-                <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse" onclick="window.location.href = 'index.html';">
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="collapse">
