--- a/card.html
+++ b/card.html
@@ -7,145 +7,187 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src='Script\jquery-3.3.1.min.js'></script>
     <link href='Css/bootstrap.min.css' rel='stylesheet' type='text/css'>
-    <link href='Css/card.css' rel='stylesheet' type='text/css'>
+    <link href='Css/card1.css' rel='stylesheet' type='text/css'>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
     <script src='Script\bootstrap.min.js'></script>
     <script src='Script\card.js'></script>
-    <title>Surehealth - Card</title>
+    <title>Document - Payment</title>
 </head>
 
-<body>
-    <div class="container-fluid maincontainer">
-        <nav class="navbar navbar-expand-md nav-dark sticky-top">
-            <button class="navbar-toggler" data-toggle="navbar-collapse" data-target="#collapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <nav class="navbar-brand" href="#">
-                <span style="margin-left: 5px;color:white"></span>
-            </nav>
-            <nav class="navbar-brand" href="#">
-
-            </nav>
-            <div class="collapse navbar-collapse" id="collapse">
-                <div class="col2 ml-auto">
-                    <ul class="nav navbar-nav">
-                        <li><a class="nav-link btnservices" href="#" style="margin-right: 10px;">Services</a></li>
-                        <li><a class="nav-link btnpackages" href="#" style="margin-right: 10px;">Packages</a></li>
-                        <li><a class="nav-link btncontact" href="#contact" style="margin-right: 10px;">Contact</a></li>
-                        <li><a class="nav-link btnregister" href="#works">Register</a></li>
-                    </ul>
+<body class="d-flex flex-column">
+    <div class="container-fluid" style="padding:0px 0px;background-color: white; border-bottom: 1px solid lightgray;">
+        <div class="container con">
+            <div class="row row1" style="padding: 10px 25px;">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-8">
+                    <a href="#"><img src="Image/logotrans.png" class="img-fluid" style="width: 170px;"></a>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-4">
+                    <div class="form-inline float-right">
+                        <div class="dropdown show">
+                            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                style="background-color: white !important;border: 0px !important;color:#424242;outline:none;">
+                                <img src="Image/dp.jpeg" class="imgprof">
+                                <span class="lblusername"
+                                    style="color: #424242;font-family: Muli Semibold;font-size: 1rem;letter-spacing: -0.5px;margin-left: 5px;">Alfon
+                                    Labadan</span>
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <a class="dropdown-item" href="#">Logout</a>
+                                <a class="dropdown-item" href="#">Profile</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </nav>
-        <div class="container h-100">
-            <div class="row h-100 align-items-center" style="position: relative;">
-                <div class="col-lg-7 col-sm-12 col-md-12 col-12" style="margin-top:-100px;">
-                    <div class="form-group">
-                        <div class="form-group">
-                            <p class="psignin">Payment Information</p>
+        </div>
+    </div>
+    <div class="container-fluid" style="padding:0px;background-color: white; border-bottom: 1px solid lightgray;">
+        <div class="container con">
+            <nav class="navbar navbar-expand-sm navbar-light">
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse" onclick="window.location.href = 'index.html';">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapse">
+                    <div class="mr-auto">
+                        <ul class="nav navbar-nav">
+                            <li><a class="nav-link btnhome" target="index.html"
+                                    style="color: #424242;font-family: Muli Semibold;font-size: 1rem;letter-spacing: -0.5px;cursor: pointer;margin-right: 5px;"><img
+                                        src="Image/home.png" class="img-fluid"
+                                        style="width:16px;margin-top:-4px;margin-right: 4px;cursor: pointer;">Home</a>
+                            </li>
+                            <li><a class="nav-link btnpackage" target="package.html"
+                                    style="color: #424242;font-family: Muli Semibold;font-size: 1rem;letter-spacing: -0.5px;cursor: pointer;"><img
+                                        src="Image/package.png" class="img-fluid"
+                                        style="width:16px;margin-top:-4px;margin-right: 4px;cursor: pointer;">Package</a>
+                            </li>
+                            <li><a class="nav-link btnabout" target="about.html"
+                                    style="color: #424242;font-family: Muli Semibold;font-size: 1rem;letter-spacing: -0.5px;cursor: pointer;"><img
+                                        src="Image/information.png" class="img-fluid"
+                                        style="width:16px;margin-top:-4px;margin-right: 4px;cursor: pointer;">About</a>
+                            </li>
+                            <li><a class="nav-link btnlogout" target="index.html"
+                                    style="color: #424242;font-family: Muli Semibold;font-size: 1rem;letter-spacing: -0.5px;cursor: pointer;visibility: hidden;"><img
+                                        src="Image/logout.png" class="img-fluid"
+                                        style="width:16px;margin-top:-4px;margin-right: 4px;cursor: pointer;">Logout</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </div>
+    <div class="container-fluid" style="padding:0px;">
+        <div class="container conbody h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-lg-6 col-md-6 colcard">
+                    <div class='card-wrapper'></div>
+                </div>
+                <div class="col-lg-6 col-md-6 colinfo">
+                    <p class="pinfo">Payment Info</p>
+                    <p class="pinfo1">Please add your payment method to complete your order.</p>
+                    <form>
+                        <div class="divname" style="margin-top: 40px;line-height: 12px;">
+                            <p class="pname pname1">Cardholder Name</p>
+                            <input type="text" class="txtname" name="name" placeholder="" autocomplete="off" />
                         </div>
-                        <div class="form-group float-left" style="margin-top: 1px;">
-                            <div class='card-wrapper'></div>
+                        <div class="divnumber" style="margin-top: 20px;line-height: 12px;">
+                            <p class="pname pnumber">Cardholder Number</p>
+                            <input type="text" class="txtcardnumber" name="number" placeholder="" autocomplete="off" />
                         </div>
-                        <form style="margin-top: 10px;">
-                            <input required='' type='text' class="txtcardnumber" name="number">
-                            <label alt='Cardholder Number' placeholder='Cardholder Number'></label>
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <input required='' type='text' class="txtfirstname" name="first-name">
-                                    <label alt='First Name' placeholder='First Name'></label>
-                                </div>
-                                <div class="col-sm-3" style="padding-left:40px;">
-                                    <input required='' type='text' class="txtlastname" name="last-name">
-                                    <label alt='Last Name' placeholder='Last Name'></label>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="divexpiry" style="margin-top: 20px;line-height: 12px;">
+                                    <p class="pname pexpiry">Expiry Date</p>
+                                    <input type="text" class="txtexpiry" name="expiry" placeholder="MM/YYYY"
+                                        autocomplete="off" />
                                 </div>
                             </div>
-                            <input required='' type='text' class="txtcardexpiry" name="expiry">
-                            <label alt='MM/YYYY' placeholder='MM/YYYY'></label>
-                            <input required='' type='text' class="txtcardcvc" name="cvc" >
-                            <label alt='Card Cvc' placeholder='Card Cvc'></label>
-                        </form>
-                        <div class="div1">
-                            <label class="lblrememberme"><input type="checkbox" style="margin-top:10px;"> Save my card
-                                for auto-renewal</label>
+                            <div class="col-lg-6">
+                                <div class="divexpiry" style="margin-top: 20px;line-height: 12px;">
+                                    <p class="pname pcvc">CVC</p>
+                                    <input type="text" class="txtcvc" name="cvc" placeholder="" autocomplete="off" />
+                                </div>
+                            </div>
                         </div>
-                        <input type="button" class="btnlogin" value="Buy">
-                    </div>
-                </div>
-                <p
-                    style="position: absolute;bottom:6%;font-family:hind;font-size:14px;color: #9E9E9E;margin-left: 10px;">
-                    2019 All rights Reserved Surehealth by Aventus Privacy and Terms.</p>
-                <div class="col-lg-5 col-sm-12 col-md-12 col-12 colright">
-                    <label class="phealth">Surehealth</label><br>
-                    <p class="phealth1">Start insuring your family's health. Insuring life insuring healthcare.Gain
-                        access to unlimited free consultations with our experts for one whole year, and enjoy generous
-                        discounts on various medical procedures.</p><br>
-                    <div class="form-inline">
-                        <hr class="hr1"
-                            style="border:0px;background-color: white;width: 40px;height:3px;margin: 0 0 !important;text-align: left !important; margin-right: 10px !important;cursor: pointer;border-radius: 25px;">
-                        <hr class="hr2"
-                            style="border:0px;background-color: rgba(255,255,255,0.5);width: 40px;height:3px;margin: 0 0 !important;text-align: left !important; margin-right: 10px !important;cursor: pointer;border-radius: 25px;">
-                        <hr class="hr3"
-                            style="border:0px;background-color: rgba(255,255,255,0.5);width: 40px;height:3px;margin: 0 0 !important;text-align: left !important; margin-right: 10px !important;cursor: pointer;border-radius: 25px;">
-                    </div>
-                    <div class="form-inline" style="margin-top: 50px;">
-                        <img src="Image/facebookfooter.png" class="img-fluid imgfooterlogo"
-                            style="width: 20px;margin-right: 20px;cursor: pointer;">
-                        <img src="Image/twitterfooter.png" class="img-fluid imgfooterlogo"
-                            style="width: 20px;margin-right: 20px;cursor: pointer;">
-                        <img src="Image/gmail.png" class="img-fluid imgfooterlogo"
-                            style="width: 20px;margin-right: 20px;cursor: pointer;">
-                    </div>
+                    </form>
+                    <button class="btncard">Add card</button>
                 </div>
             </div>
-
+        </div>
+        <div class="container-fluid " style="background-color: #212121;margin-top:-70px;">
+            <div class="row align-items-center footer">
+                <div class="col-lg-12 text-center">
+                    <p class="pfooter">For security reasons, we do not store your credit card information. To change
+                        your
+                        credit card information, please contact us.</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
 <script>
-    $('.hr1').click(function (e) {
-        $(".phealth").fadeOut(300, function () {
-            $(this).html("Surehealth").fadeIn(300);
-        });
-        $(".phealth1").fadeOut(300, function () {
-            $(this).html("Start insuring your family's health. Insuring life insuring healthcare.Gain access to unlimited free consultations with our experts for one whole year, and enjoy generous discounts on various medical procedures.").fadeIn(300);
-        });
-        $(this).css("background-color", "white");
-        $('.hr2').css("background-color", "rgba(255,255,255,0.5)");
-        $('.hr3').css("background-color", "rgba(255,255,255,0.5)");
-    });
-
-    $('.hr2').click(function (e) {
-        $(".phealth").fadeOut(300, function () {
-            $(this).html("Card Variant").fadeIn(300);
-        });
-        $(".phealth1").fadeOut(300, function () {
-            $(this).html("Get the benefits you need at the price you want with our 6 SUREHEALTH card variants: Classic, Elite, Premium, Prestige, Kiddie, and Prime.").fadeIn(300);
-        });
-        $(this).css("background-color", "white");
-        $('.hr1').css("background-color", "rgba(255,255,255,0.5)");
-        $('.hr3').css("background-color", "rgba(255,255,255,0.5)");
-    });
-
-    $('.hr3').click(function (e) {
-        $(".phealth").fadeOut(300, function () {
-            $(this).html("Aventus").fadeIn(300);
-        });
-        $(".phealth1").fadeOut(300, function () {
-            $(this).html("We at Aventus Medical Care, Inc. are devoted to providing high-quality, effective, and efficient clinic services intended to improve the health and well-being of the communities we serve.").fadeIn(300);
-        });
-        $(this).css("background-color", "white");
-        $('.hr1').css("background-color", "rgba(255,255,255,0.5)");
-        $('.hr2').css("background-color", "rgba(255,255,255,0.5)");
-    });
-
     var card = new Card({
         form: 'form',
         container: '.card-wrapper',
 
-        formSelectors: {
-            nameInput: 'input[name="first-name"], input[name="last-name"]'
+        placeholders: {
+            number: '**** **** **** ****',
+            name: 'Full Name',
+            expiry: '**/****',
+            cvc: '***'
         }
     });
+
+    $(function () {
+        $(".txtname").focus(function () {
+            $(".pname1").css("color", "#00C853");
+        });
+    })
+
+    $(function () {
+        $(".txtname").blur(function () {
+            $(".pname1").css("color", "#757575");
+        });
+    })
+
+    $(function () {
+        $(".txtcardnumber").focus(function () {
+            $(".pnumber").css("color", "#00C853");
+        });
+    })
+
+    $(function () {
+        $(".txtcardnumber").blur(function () {
+            $(".pnumber").css("color", "#757575");
+        });
+    })
+
+    $(function () {
+        $(".txtexpiry").focus(function () {
+            $(".pexpiry").css("color", "#00C853");
+        });
+    })
+
+    $(function () {
+        $(".txtexpiry").blur(function () {
+            $(".pexpiry").css("color", "#757575");
+        });
+    })
+
+    $(function () {
+        $(".txtcvc").focus(function () {
+            $(".pcvc").css("color", "#00C853");
+        });
+    })
+
+    $(function () {
+        $(".txtcvc").blur(function () {
+            $(".pcvc").css("color", "#757575");
+        });
+    })
 </script>
 
 </html>
