--- a/list.html
+++ b/list.html
@@ -37,10 +37,9 @@
                                     Alfon Labadan
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">Login</a>
                                     <a class="dropdown-item" href="#">Logout</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">Profile</a>
+                                    <a class="dropdown-item" href="profile.html">Profile</a>
                                 </div>
                             </li></a></li>
                         </ul>
