--- a/card.html
+++ b/card.html
@@ -117,8 +117,8 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid " style="background-color: #212121;margin-top:-70px;">
-            <div class="row align-items-center footer">
+        <div class="container-fluid footer" style="background-color: #212121;">
+            <div class="row align-items-center ">
                 <div class="col-lg-12 text-center">
                     <p class="pfooter">For security reasons, we do not store your credit card information. To change
                         your
